solved layout problem

--- a/src/components/Cards/ChapterCard.scss
+++ b/src/components/Cards/ChapterCard.scss
@@ -15,10 +15,11 @@
 
   .translated-name {
     color: #B9A2D8;
+    font-size: 14px;
   }
 
   .number {
-    font-size: 18;
+    font-size: 16px;
     font-weight: 600;
     color: #aaa;
   }
@@ -28,7 +29,7 @@
   position: relative;
 
   .icon {
-    width: 50px;
+    width: 45px;
   }
 
   .number {
